--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shake-the-data",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/shake-the-data",
+  "homepage": "https://relabcc.github.io/shake-the-data",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
