--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.2",
     "d3-array": "^3.2.0",
+    "d3-format": "^3.1.0",
     "d3-scale": "^4.0.2",
     "lodash": "^4.17.21",
     "matter-js": "^0.18.0",
@@ -14,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
